--- a/src/components/reactgames/react.css
+++ b/src/components/reactgames/react.css
@@ -69,11 +69,23 @@
     position: relative;
 }
 
+.bokstav {
+    font-size: 10px;
+    color: black;
+    font-weight: 500;
+    margin-top: 0px;
+    margin-bottom: 2px;
+
+}
+
 .letter2 {
     font-size: 10px;
     color: black;
     font-weight: 500;
     margin-top: 0px;
+    transform: rotate(180deg);
+    margin-left: 33.5px;
+    margin-top: 28px;
 }
 
 .spade {
@@ -81,8 +93,20 @@
    width: 5px;
    height: 5px;
    font-size: 5px;
-   margin-top: -11px;
+   margin-top: -2px;
    margin-left: 1px!important; 
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+.spade2 {
+   transform: rotate(180deg);
+   color: black;
+   width: 5px;
+   height: 5px;
+   font-size: 5px;
+   margin-top: -26px;
+   margin-left: 34.5px!important; 
    display: flex;
    justify-content: center;
    align-items: center;
@@ -100,29 +124,13 @@
     color: black!important;
 }
 
-.upside-down {
-    font-size: 10px;
-    color: black;
-    font-weight: 500;
-    margin-top: 0px;
-    transform: rotate(180deg);
-    align-self: flex-end;
-    justify-self: flex-end!important;
-    margin-top: 15px;
-    margin-bottom: 0px;
-}
+
 
 .box {
     position: relative;
 }
 
-.box2 {
-    transform: rotate(180deg);
-    align-self: flex-end!important;
-    justify-self: flex-end!important;
-    margin-top: 24px;
-    width: 20px;
-}
+
 
 
 
