--- a/src/components/reactgames/react.css
+++ b/src/components/reactgames/react.css
@@ -21,114 +21,11 @@
     font-size: 20px;
 }
 
-.card {
-    margin-top: 20px;
-    margin-left: -15px;
-    width: 40px;
-    height: 55px;
-    border: 1px solid white;
-    border-radius: 2px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding-top: 0px;
-    background-color: whitesmoke;
-    padding: 2px;
 
+a {
+    text-decoration: none;
 }
 
-.letter {
-    font-size: 10px;
-    color: red;
-    font-weight: 500;
-    margin-top: 0px;
-}
-
-.heart {
-    color: red;
-    width: 6px;
-    font-size: 5px;
-    margin-top: -10px;
-}
-
-.card2 {
-    margin-top: -50px;
-    margin-right: -15px;
-    width: 40px;
-    height: 55px;
-    border: 1px solid white;
-    border-radius: 2px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding-top: 0px;
-    background-color: whitesmoke;
-    padding: 2px;
-    position: relative;
-}
-
-.bokstav {
-    font-size: 10px;
-    color: black;
-    font-weight: 500;
-    margin-top: 0px;
-    margin-bottom: 2px;
-
-}
-
-.letter2 {
-    font-size: 10px;
-    color: black;
-    font-weight: 500;
-    margin-top: 0px;
-    transform: rotate(180deg);
-    margin-left: 33.5px;
-    margin-top: 28px;
-}
-
-.spade {
-   color: black;
-   width: 5px;
-   height: 5px;
-   font-size: 5px;
-   margin-top: -2px;
-   margin-left: 1px!important; 
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
-.spade2 {
-   transform: rotate(180deg);
-   color: black;
-   width: 5px;
-   height: 5px;
-   font-size: 5px;
-   margin-top: -26px;
-   margin-left: 34.5px!important; 
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
-
-.big {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 12px;
-    height: 12px;
-    margin-left: -6px;
-    margin-top: -6px;
-    font-size: 11px!important;
-    color: black!important;
-}
-
-
-
-.box {
-    position: relative;
-}
 
 
 
