--- a/src/components/unitygames/unitygames.css
+++ b/src/components/unitygames/unitygames.css
@@ -1,19 +1,27 @@
 .unity-container {
     height: auto;
     width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     position: relative;
     margin-bottom: 30px;
+    padding-bottom: 100px;
+    
 }
 
 
-.dodegame {
-    margin-top: 130px;
+.dodgegame {
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    margin-bottom: 100px;
+}
+
+.dodger-image {
+    width: 70px;
 }
